--- a/packages/documentation/src/pages/platform/tools/feature-flags.mdx
+++ b/packages/documentation/src/pages/platform/tools/feature-flags.mdx
@@ -13,10 +13,8 @@ Feature toggles:
 - Provide code helpers for handling common user experience scenarios
 - Are powered by an open-source gem called [Flipper gem](https://github.com/jnunemaker/flipper)
 
-After the page is rendered, the feature toggle client retrieves the latest toggle values from the feature toggle service and the page is updated using the latest feature toggle values. The application shows a loading state for the new feature while the toggle values are retrieved from the service.
-
 See the following sections for information about creating feature toggles:
-- [Writing good feature flags](#writing-good-feature-flags)
+- [Writing good feature toggles](#writing-good-feature-flags)
 - Adding a new feature toggle
    - [Frontend](#add-feature) 
    - [Backend](#backend)
@@ -29,6 +27,8 @@ Keep the following items in mind as you add feature toggles:
 - Test your feature toggle in staging before using it in production.
 - Remove feature toggles as soon as they are not needed.
 - Make toggles that are [easy to delete](https://programmingisterrible.com/post/139222674273/write-code-that-is-easy-to-delete-not-easy-to) by gating a behavior in as few places as possible. It's often better to have blocks of repeating code that can be quickly deleted later than it is to gate several small pieces of code.
+
+After a page is rendered, the feature toggle client retrieves the latest toggle values from the feature toggle service and the page is updated using the latest feature toggle values. The application shows a loading state for the new feature while the toggle values are retrieved from the service.
 
 ## <a id="add-feature">Adding a new feature toggle (frontend)</a>
 
