--- a/packages/documentation/src/pages/platform/tools/feature-flags.mdx
+++ b/packages/documentation/src/pages/platform/tools/feature-flags.mdx
@@ -36,7 +36,7 @@ Follow these steps to add and use a new feature toggle in vets-website:
 
 1. Determine your feature toggle name.
 
-   <b>Note:</b> There are no naming conventions yet. Current examples put the application name first, such as `facilityLocatorShowCommunityCares` and `profileShowDirectDeposit`.
+   **Note:** There are no naming conventions yet. Current examples put the application name first, such as `facilityLocatorShowCommunityCares` and `profileShowDirectDeposit`.
 
 2. Add the feature name to vets-api (in snake case) by updating [config/features.yml](https://github.com/department-of-veterans-affairs/vets-api/blob/master/config/features.yml):
 
@@ -107,7 +107,7 @@ Follow these steps to add and use a new feature toggle in vets-api:
 
 1. Determine your feature toggle name.
 
-   <b>Note:</b> There are no naming conventions yet. Current examples put the application name first, such as `facilityLocatorShowCommunityCares` and `profileShowDirectDeposit`.
+   **Note:** There are no naming conventions yet. Current examples put the application name first, such as `facilityLocatorShowCommunityCares` and `profileShowDirectDeposit`.
 
 2. Add the feature name to vets-api (in snake case) by updating [config/features.yml](https://github.com/department-of-veterans-affairs/vets-api/blob/master/config/features.yml):
 
