--- a/packages/documentation/src/pages/platform/tools/feature-flags.mdx
+++ b/packages/documentation/src/pages/platform/tools/feature-flags.mdx
@@ -193,7 +193,7 @@ flipper:
 
    The values of each toggle are cached in memory for one minute, so it may take that long to see the effect of enabling or disabling the toggle.
      
-   <img width="1287" alt="Screen Shot" src="https://user-images.githubusercontent.com/19188/74881655-b4d11a80-533b-11ea-8e97-fdea24c10830.png">
+   ![Screen Shot](https://user-images.githubusercontent.com/19188/74881655-b4d11a80-533b-11ea-8e97-fdea24c10830.png)
 
 *The following sections contain information that will be phased out.*
 
