--- a/packages/documentation/src/pages/forms/about-the-schema-and-uischema-objects.mdx
+++ b/packages/documentation/src/pages/forms/about-the-schema-and-uischema-objects.mdx
@@ -237,6 +237,12 @@ The VAFS code includes additional `uiSchema` functionality not found in the RJSF
     // This option is ignored if there is a custom `'ui:reviewField'` defined
     hideEmptyValueInReview: true || false,
 
+    // Hides label added before the widget
+    hideLabelText: true || false,
+
+    // use label or legend (inside fieldset)
+    showFieldLabel: 'label', // vs anything other than 'label'
+
     // A function that conditionally hides fields in the form. `hideIf` provides the `index`
     // argument when you use `ui:required` on data inside an array.
     hideIf: function (formData, index) {
