--- a/packages/documentation/src/pages/platform/tools/manual-reviews.mdx
+++ b/packages/documentation/src/pages/platform/tools/manual-reviews.mdx
@@ -31,4 +31,4 @@ When ESLint rules are disabled, VSP will evaluate each case individually. VFS te
 
 ### Adding icons
 
-VSP uses Font Awesome as a dependency, which uses the `<i>` tag for adding icons. Sometimes an icon is used as decoration, but other times it is used to convey meaning to the user. VSP reviews the code to ensure that whenever an icon is being used semantically, those semantics are also conveyed to a screen reader.
+VSP uses Font Awesome as a dependency, which uses the `<i>` tag for adding icons. Sometimes an icon is used as decoration, but other times it is used to convey meaning to the user. VSP reviews the code to ensure that whenever an icon is being used to convey meaning, the meaning is also conveyed to a screen reader.
