--- a/packages/documentation/src/pages/platform/front-end-standards/manual-reviews.mdx
+++ b/packages/documentation/src/pages/platform/front-end-standards/manual-reviews.mdx
@@ -27,7 +27,7 @@ Examples:
 
 VSP enforces [ESLint rules](https://github.com/department-of-veterans-affairs/va.gov-team/tree/master/platform/engineering/frontend/eslint) through CircleCI to enforce code quality. ESLint rules are included in the `.eslintrc` file, which is located in the root folder. Any rules that VSP is [testing for inclusion](https://github.com/department-of-veterans-affairs/va.gov-team/blob/master/platform/engineering/frontend/eslint/adding-new-rules.md) are located in the `circle.eslint.json` file.
 
-When ESLint rules are disabled, VSP will evaluate each case individually. VFS teams are responsible for fixing errors. 
+When ESLint rules are disabled, VSP will review each case individually. VFS teams are responsible for resolving any errors. 
 
 ### Adding icons
 
