--- a/packages/documentation/src/pages/platform/front-end-standards/manual-reviews.mdx
+++ b/packages/documentation/src/pages/platform/front-end-standards/manual-reviews.mdx
@@ -5,7 +5,7 @@ tags: vagovprod, vagovstaging, vagovdev
 
 # Manual reviews
 
-Each pull request (PR) on `vets-website` runs through an automated process looking for code additions and modifications that don't meet code quality standards. If a potential issue is found, a bot will leave an automated comment and request a review from the **frontend-review-group** (see the example below).
+Each pull request (PR) on `vets-website` runs through an automated process looking for code additions and modifications that don't meet code quality standards. If a potential issue is found, a bot will leave an automated comment and request a review from the **frontend-review-group** (see below).
 
    ![Screen Shot](https://images.zenhubusercontent.com/5e387fa505ac7e30c820a2da/a09c4c8c-ae32-4142-8fa5-0fc81b6a1892)
 
