--- a/packages/documentation/src/pages/platform/front-end-standards/manual-reviews.mdx
+++ b/packages/documentation/src/pages/platform/front-end-standards/manual-reviews.mdx
@@ -21,7 +21,7 @@ VSP reviews logs to Sentry to ensure that any new logs are useful and do not con
 
 Examples:
 - Do not log an entire request response if all that's important is an error code.
-- Do not log user-identifying information such as names, emails, or user IDs.
+- Do not log PII such as names, emails, or user IDs.
 
 ### ESLint
 
